Oppdatert PDFA validator til å støtte PDF/A 3a, 3b, 3u
* Støttet i forskrift mars 2022
* Refaktorerte koden. Lukker ressurser